2004-12-15  Francois Felix Ingrand  <felix@ingrand.net>

	* config.h: Remove config.h.in only use config-ac.h

2004-12-03  Francois Felix Ingrand  <felix@ingrand.net>

	* oprs-cat.c (main): remove the call to setpgrp() ... not even
	sure why we need this...

	* database.c: hash_a_term remove this compilation flag for HP
	system... CANNOT_CAST_DOUBLE_IN_INT... I am not sure it is
	"meaningfull"... 

2004-12-02  Francois Felix Ingrand  <felix@ingrand.net>

	* configure.ac: Trying to use autoconf...

2004-10-07  Francois Felix Ingrand  <felix@ingrand.net>

	* opt-parser.y: This file should be removed...

	* ope-parser.y, oprs-parser.y: Remove redundant declaration of
	expr and list_expr in this file... More resent version of bison
	seems to be mor touchy about this...

2004-05-27  Francois Felix Ingrand  <felix@laas.fr>

	* version.c: 1.0 Beta PatchLevel 1. I think, I fixed Robert
	Goldman problem... I am also putting HAS_READLINE in the sparc and
	linux config. Now that we are in BSD like licence, this should not
	be an issue.

	* oprs-server-main.c: filename_completion_function becomes
	rl_filename_completion_function... 

	* Makefile.dev: a missing dependancy for oprs-server-parser.l

	* lex-parser-def.l: Robert Goldman reporter a problem with the
	parsing... Indeed, we do not return when a return is being hit on
	the keyboard... reversing to Propice 2.0 code... I wish I
	could remember why this code was deleted... So much for "loging"
	ChangeLog modification.

	* oprs-server-main.c: remove "key" code left from Propice.

2004-05-26  Francois Felix Ingrand  <felix@laas.fr>

	* xhelp.c: Change the code to warn about the online (i.e. linked to the
	Motif widget) documentation availability.

2003-09-22  Francois Felix Ingrand  <felix@ingrand.net>

	* README: creation...
	
$Id$