@@ -47,16 +47,11 @@ X_LIB = @MOTIF_LIBS@ @X_LIBS@ @X_EXTRA_LIBS@ -lXt -lX11
 
 X_INCLUDE = @MOTIF_CFLAGS@ @X_CFLAGS@
 
-EXTRA_LIB =
+EXTRA_LIB = @LIBS@
 
-HAS_READLINE = @HAVE_LIBREADLINE@
+EXTRA_LIB += @READLINE_LIBS@
 
-ifdef HAS_READLINE
-EXTRA_LIB += -L/lib -lreadline -lhistory -ltermcap
-endif
-
-
-EXTRA_LIB += -lm
+READLINE_INCLUDE = @READLINE_INCLUDES@
 
 BINDIR = @bindir@
 LIBDIR = @libdir@
