@@ -1,3 +1,11 @@
+2005-01-03  Francois Felix Ingrand  <felix@laas.fr>
+
+	* ac_readline.m4: Try a new readline macro.
+
+2004-12-22  Francois Felix Ingrand  <felix@laas.fr>
+
+	* oprs-parser.y: Removed redondant declaration
+
 2004-12-15  Francois Felix Ingrand  <felix@ingrand.net>
 
 	* config.h: Remove config.h.in only use config-ac.h
